[project]
name = "boto"
version = "0.1.0"
description = "my little URL shortener on FastAPI"
authors = [
    {name = "Mikhail1711",email = "nikolajprosov33@gmail.com"}
]
license = {text = ""}
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard] (>=0.129.0,<0.130.0)",
    "pydantic[email] (>=2.12.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]
